# cursor-status-bar

./: .gitignore  Package.swift  build-app.sh
.github/workflows/: build.yml
Sources/CursorStatusBar/: AppDelegate.swift  CursorAPI.swift  Models.swift  PopupPanel.swift  TokenExtractor.swift
landing/: index.html
tauri/: package-lock.json  package.json
tauri/src/: index.html  main.js  style.css
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: cursor_api.rs  lib.rs  main.rs  models.rs  token_extractor.rs
