[package]
name = "cursor-status-bar"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
open = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "cursor_status_bar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
